--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .sass-cache/
 sftp-config.json
 css/*.css
-.DS_Store
 sass/config.rb
+sass/base/config.rb
+sass/layout/config.rb
+sass/module/config.rb
+sass/state/config.rb
+.DS_Store
